# dye-my-shell

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  TODO.md  pyproject.toml  tasks.py
src/dye/: __main__.py  agents.py  dye.py  scope.py  theme.py  utils.py
src/dye/agents/: __init__.py  base.py  dye.py  environment_variables.py  eza.py  fzf.py  gnu_ls.py  iterm.py  ls_colors.py  shell.py
tests/: conftest.py  test_agent_dye.py  test_agent_ls_colors.py  test_dye.py  test_dye_agents.py  test_dye_apply.py  test_dye_elements.py  test_pattern.py  test_theme.py
themes/: dracula.toml  template.toml
