# pyproject.toml
[build-system]
requires = [
    "setuptools>=64",
    "wheel",
    "setuptools-scm>=8"
]
build-backend = "setuptools.build_meta"


[project]
name = "dye-your-shell"
description = "Apply color themes to a variety of shell command line tools."
readme = "README.md"
authors = [
    {name = "Jared Crapo", email = "jared@kotfu.net"},
]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["shell", "bash", "theme", "command line"]
requires-python = ">=3.9"
dependencies = [
    "rich",
    "rich_argparse",
    "tomlkit",
    "Jinja2",
    "python-benedict>=0.34.1",
]
# for setuptools-scm
dynamic = ["version"]


[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "pytest-cov",
    "codecov",
    "ruff",
    "invoke",
]


[tool.setuptools_scm]
# empty section is the equivilent of setuptools_scm=True in setup.py


[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
dye = "dye.dye:Dye.main"

[project.urls]
homepage = "https://github.com/kotfu/dye-your-shell"
repository = "https://github.com/kotfu/dye-your-shell"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov-report=term-missing --cov=src/dye"

[[tool.uv.index]]
name = "test-pypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
